img+align fix

--- a/style.css
+++ b/style.css
@@ -3177,7 +3177,7 @@
                 color: #ededed;
                 font-size: 1rem;
                 font-weight: 200;
-                line-height: 1.125;
+                line-height: 1.334;
             }
 
             .title strong {
